--- a/bundles/org.eclipse.swt.gtk.freebsd.amd64/.project
+++ b/bundles/org.eclipse.swt.gtk.freebsd.amd64/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.eclipse.swt.gtk.linux.x86_64</name>
+	<name>org.eclipse.swt.gtk.freebsd.amd64</name>
 	<comment></comment>
 	<projects>
 	</projects>
