--- a/pom.xml
+++ b/pom.xml
@@ -58,10 +58,13 @@
     <module>bundles/org.eclipse.swt.gtk.freebsd.aarch64</module>
     <module>bundles/org.eclipse.swt.gtk.freebsd.powerpc64</module>
     <module>bundles/org.eclipse.swt.gtk.freebsd.powerpc64le</module>
+-->
     <module>bundles/org.eclipse.swt.cocoa.macosx.x86_64</module>
     <module>bundles/org.eclipse.swt.cocoa.macosx.aarch64</module>
+    <module>bundles/org.eclipse.swt.gtk.linux.aarch64</module>
+    <module>bundles/org.eclipse.swt.gtk.linux.ppc64le</module>
+    <module>bundles/org.eclipse.swt.gtk.linux.x86_64</module>
     <module>bundles/org.eclipse.swt.win32.win32.x86_64</module>
--->
     <!--module>bundles/org.eclipse.swt.browser.chromium.cocoa.macosx.x86_64</module>
     <module>bundles/org.eclipse.swt.browser.chromium.gtk.freebsd.amd64</module>
     <module>bundles/org.eclipse.swt.browser.chromium.win32.win32.x86_64</module-->
